Eureka/src/main/resources/eureka-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  labels:
    service: eureka-server
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    service: eureka-server
